bad/assign_field_class_fcall_string.example_compiler_output
ERROR
[1mbad/assign_field_class_fcall_string.lat:10:12: [1;31merror: [0;1massigning to `Y` from incompatible type `string`[m
	foo().fld = "";
	          [1;32m^[m
